// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persists to/from customSynchronizer autoLoads 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from customSynchronizer autoLoads 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              2240063674,
            ],
          },
          528453758,
        ],
      },
      472051525,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from customSynchronizer autoLoads 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1105394814,
            ],
          },
          2974635182,
        ],
      },
      2668639873,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from customSynchronizer autoLoads 4`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1105394814,
            ],
          },
          2974635182,
        ],
      },
      2668639873,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from customSynchronizer autoSaves 1`] = `undefined`;

exports[`Persists to/from customSynchronizer autoSaves 2`] = `undefined`;

exports[`Persists to/from customSynchronizer autoSaves 3`] = `undefined`;

exports[`Persists to/from customSynchronizer autoSaves 4`] = `undefined`;

exports[`Persists to/from customSynchronizer loads 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from customSynchronizer saves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from customSynchronizer saves 2`] = `undefined`;

exports[`Persists to/from file autoLoads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoLoads 2`] = `
[
  "",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoLoads 3`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoLoads 4`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoSaves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoSaves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoSaves 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoSaves 4`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      2775788066,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoSaves without race 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file autoSaves without race 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1105394814,
            ],
          },
          2974635182,
        ],
      },
      2668639873,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file loads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file saves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from file saves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage autoLoads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage autoLoads 2`] = `
[
  "",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage autoLoads 3`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage autoLoads 4`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage autoSaves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage autoSaves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage autoSaves 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage autoSaves 4`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      2775788066,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage loads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage saves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localStorage saves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localSynchronizer autoLoads 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localSynchronizer autoLoads 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              2240063674,
            ],
          },
          528453758,
        ],
      },
      472051525,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localSynchronizer autoLoads 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1105394814,
            ],
          },
          2974635182,
        ],
      },
      2668639873,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localSynchronizer autoLoads 4`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1105394814,
            ],
          },
          2974635182,
        ],
      },
      2668639873,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localSynchronizer autoSaves 1`] = `undefined`;

exports[`Persists to/from localSynchronizer autoSaves 2`] = `undefined`;

exports[`Persists to/from localSynchronizer autoSaves 3`] = `undefined`;

exports[`Persists to/from localSynchronizer autoSaves 4`] = `undefined`;

exports[`Persists to/from localSynchronizer loads 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localSynchronizer saves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from localSynchronizer saves 2`] = `undefined`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 2`] = `
[
  "",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 3`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 4`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 4`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 5`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      2775788066,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 6`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
        ],
      },
    ],
    1,
  ],
]
`;

exports[`Persists to/from mockMergeableChangesListener loads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener saves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableChangesListener saves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 2`] = `
[
  "",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 3`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 4`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 4`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 5`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      2775788066,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 6`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
        ],
      },
    ],
    1,
  ],
]
`;

exports[`Persists to/from mockMergeableContentListener loads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener saves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableContentListener saves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 2`] = `
[
  "",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 3`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 4`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 4`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 5`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      2775788066,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 6`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
        ],
      },
    ],
    1,
  ],
]
`;

exports[`Persists to/from mockMergeableNoContentListener loads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener saves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from mockMergeableNoContentListener saves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage autoLoads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage autoLoads 2`] = `
[
  "",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage autoLoads 3`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage autoLoads 4`] = `
[
  "",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage autoSaves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage autoSaves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage autoSaves 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage autoSaves 4`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          719046575,
        ],
      },
      256038926,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      2775788066,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage loads 1`] = `
[
  "",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage saves 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Persists to/from sessionStorage saves 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      108401272,
    ],
  ],
  0,
]
`;

exports[`Supported, MergeableStore Changes in setPersisted 1`] = `
[
  "["",[["",{"t1":["",{"r1":["",{"c1":["Hc2DO@000008DKS9",1]}]}]}],["",{}],1]]",
  "["",[["",{}],["",{"v1":["Hc2DO@000018DKS9",1]}],1]]",
]
`;

exports[`Supported, MergeableStore Content in setPersisted 1`] = `"["",[["Hc2DO@000008DKS9",{"t1":["Hc2DO@000008DKS9",{"r1":["Hc2DO@000008DKS9",{"c1":["Hc2DO@000008DKS9",1,4065945599]},1279994494]},1293085726]},4033596827],["Hc2DO@000008DKS9",{"v1":["Hc2DO@000008DKS9",1,4065945599]},2304392760]],0]"`;

exports[`Supported, MergeableStore loading from legacy 1`] = `"["",[["",{"t1":["",{"r1":["",{"c1":["Hc2DO@000008DKS9",1,4065945599]},3278308926]},608074644]},3689956797],["",{"v1":["Hc2DO@000008DKS9",1,4065945599]},108401272]],0]"`;
